# SC4002_NLP

./: .gitignore  Part1_model.ipynb  Preprocess_data.ipynb  Q1_part1.ipynb  Q1_part2.ipynb  Q1_part3.ipynb  Q2_model_average.ipynb  Q2_model_last_word.ipynb  Q2_model_max_pooling.ipynb  Q2_model_sum.ipynb  Q2_preprocessing.ipynb  README.md  count_max_length.py  main.py  modified_cs230_model.ipynb  part_1a.ipynb  placeholder_dataset.txt  placeholder_label.txt  pyproject.toml  requirements.txt  stanford_cs230_model.ipynb  stanford_cs230_model_embedding_changed.ipynb  testing.ipynb
Source Code/: Q1_part1.ipynb  Q1_part2.ipynb  Q1_part3.ipynb  Q2_model_average.ipynb  Q2_model_last_word.ipynb  Q2_model_max_pooling.ipynb  Q2_model_sum.ipynb  Q2_preprocessing.ipynb
Source Code/TREC_dataset/: modified_test_data.csv
TREC_dataset/: eugene_test.csv  eugene_train.csv  modified_test_data.csv  modified_training_data.csv
stanford_cs230_data/: dataset_params.json
stanford_cs230_small_data/: tags.txt
stanford_cs230_small_data/test/: labels.txt
stanford_cs230_small_data/train/: labels.txt
stanford_cs230_small_data/val/: labels.txt
training_information/: train_metrics_list.pkl  val_metrics_list.pkl
training_information/Q1_part3/: train_metrics_list.pkl  val_metrics_list.pkl
version_control/: asd.py  jupyter_notebook_version_control.py  list_of_jupyter_notebooks_to_be_converted_to_py.txt
version_control/output_python_scripts/: Q2_model_average.py  Q2_model_last_word.py
